# RenderMath

./: .editorconfig  .gitignore  Build.bat  Build.sh  CMakeLists.txt  GenerateBuild.bat  GenerateBuild.sh  README.md  run.sh  vector.h
Debug/: matrix.h
Include/: CMakeLists.txt  defines.h  matrix.h  vector2.cpp  vector2.h  vector3.cpp  vector3.h  vector4.h
config/: CMakeLists.txt  config.hpp.in
sandbox/: CMakeLists.txt  rendermath.cpp  rendermath.h
